--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <nav>
         <ul>
            <li class="brand"><img src="Logo.jpg" alt="spotify" height="90px" width="90px"><b class="one">Gaana</b></li>
-           <li>Home</li>
-           <li>About</li>
+           <li><a href="index.html">Home</a></li>
+           <li><a href="about.html">About</a></li>
            <li></li> 
         </ul>
     </nav>
